--- a/day11/style.css
+++ b/day11/style.css
@@ -14,7 +14,7 @@ body {
     display: flex;
     background: #7A419B;
     min-height: 100vh;
-    background: linear-gradient(135deg, #7c1599 0%, #921099 48%, #7e4ae8 100%);
+    background: linear-gradient(135deg, #282828 0%, #2d2d2d 48%, #282828 100%);
     background-size: cover;
     align-items: center;
     justify-content: center;
@@ -101,7 +101,7 @@ body {
 
 .progress__filled {
     width: 50%;
-    background: #ffc600;
+    background: red;
     flex: 0;
     flex-basis: 50%;
 }
@@ -133,7 +133,7 @@ input[type=range]::-webkit-slider-thumb {
     height: 15px;
     width: 15px;
     border-radius: 50px;
-    background: #ffc600;
+    background: red;
     cursor: pointer;
     -webkit-appearance: none;
     margin-top: -3.5px;
@@ -141,7 +141,7 @@ input[type=range]::-webkit-slider-thumb {
 }
 
 input[type=range]:focus::-webkit-slider-runnable-track {
-    background: #bada55;
+    background: red;
 }
 
 input[type=range]::-moz-range-track {
@@ -159,6 +159,6 @@ input[type=range]::-moz-range-thumb {
     height: 15px;
     width: 15px;
     border-radius: 50px;
-    background: #ffc600;
+    background: red;
     cursor: pointer;
 }
